Final Syntax updates

--- a/npcs/ahshani_dondarion.yaml
+++ b/npcs/ahshani_dondarion.yaml
@@ -524,11 +524,11 @@ npc:
   - abilities:
     - title: His Master's Phantom Katana
     - content: A slightly transparent sword that seems to have a black and blue sheen to it when exposed to light. You have a +2 bonus to attack and damage rolls with this magic weapon.
-               Finesse Weapon - deals 1d8+Dex damage
-               Phantom Strike - As a bonus action, you may blink to a space behind a creature within 60 feet of you. Until the start of your next turn, you have advantage on your attack rolls with this weapon against the 
+    - content: Finesse Weapon - deals 1d8+Dex damage
+    - content: Phantom Strike - As a bonus action, you may blink to a space behind a creature within 60 feet of you. Until the start of your next turn, you have advantage on your attack rolls with this weapon against the 
                                 creature you blinked behind. This effect can be used 2 times and the katana regains all uses of this effect at dawn.
-               Quick Slash - When you hit a creature with this weapon, you may immediately make another attack at the creature as a bonus action.
-               Illusionary Double - At the start of your turn, an illusion of you appears in your space that lasts until the end of your next turn. As a bonus action, you may blink to this illusion.
+    - content: Quick Slash - When you hit a creature with this weapon, you may immediately make another attack at the creature as a bonus action.
+    - content: Illusionary Double - At the start of your turn, an illusion of you appears in your space that lasts until the end of your next turn. As a bonus action, you may blink to this illusion.
     - title: +2 Half-Plate Samurai Armor
     - content: Breast plate, grieves, bracers, and helmet of immaculately kept magical samurai-style plate armor that adds +2 to its wearers AC
     - title: Bracers of Archery
