--- a/npcs/basil_dumas.yaml
+++ b/npcs/basil_dumas.yaml
@@ -526,18 +526,18 @@ npc:
     - content: It’s rare to find a pocket watch at all outside of gnomish settlements. This one seems to be broken, as it sometimes skips back a few seconds. It holds great power for the one who attunes it, though. The broken 
                pocket watch has 3 charges. On your turn, you can spend 1 charge to take an additional bonus action, as the pocket watch ticks back by two seconds to give you another moment for something quick. Once you spend a 
                charge, you can’t spend another for 1 hour. The pocket watch regains 1 expended charge at dawn.
-               Alternately, you can force it to turn backward as far as it can go. This does not require an action or any charges from the pocket watch, but you can’t do this if you are incapacitated. You teleport to any 
+    - content: Alternately, you can force it to turn backward as far as it can go. This does not require an action or any charges from the pocket watch, but you can’t do this if you are incapacitated. You teleport to any 
                location you have been earlier in this turn, you regain any hit points you have lost since the beginning of your turn, and you can immediately take another turn. The pocket watch falls apart after that, and can’t 
                be repaired. After 1 minute, you suffer one level of exhaustion.
     - title: Arcane Lock Box
     - content: This small chest weighs 10 lbs. and is made entirely of brass or iron. The box holds 3 cubic feet or 75 lbs. of items, and objects within are considered to be under the effects of a nondetection spell. Only the 
                creature attuned to the box can open it freely. It has no keyhole, handle, or outside mechanism, making all standard non-magical means of opening it (like lock-picking) impossible. It can be broken open with a 
                Strength check of DC 25.
-               The arcane lock spell can be cast upon the box as a ritual. If the alarm spell is cast upon the box as a ritual, its duration is twice as long.
+    - content: The arcane lock spell can be cast upon the box as a ritual. If the alarm spell is cast upon the box as a ritual, its duration is twice as long.
                If a knock spell is cast upon the box, the caster must make a DC 15 (or DC 20 if the box is secured with arcane lock) ability check using their spellcasting ability. If the check fails, the spell does not open the
                box.
-               If a dispel magic spell is cast upon the box, the spells affecting the box are considered to be 5th level.
-               If a creature attuned to the box is more than 100 feet away from it, they do not loose their attunement until 1 week has passed
+    - content: If a dispel magic spell is cast upon the box, the spells affecting the box are considered to be 5th level.
+    - content: If a creature attuned to the box is more than 100 feet away from it, they do not loose their attunement until 1 week has passed
     
   profile:
 
