--- a/npcs/brygan_of_the_sunmane.yaml
+++ b/npcs/brygan_of_the_sunmane.yaml
@@ -437,12 +437,12 @@ npc:
     - content: Has advantage on Wisdom (Survival) checks to track her Favored enemies, as well as on Intelligence Checks to recall information about them
     - title: Natural Explorer 
     - content: Favored Terrain - Grassland and Forest
-               Difficult Terrain doesn't slow your group's Travel
-               Your group can't become lost except by magical means
-               Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
-               If you are traveling alone, you can move stealthily at a normal pace
-               When you Forage, you find twice as much food as you normally would
-               While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
+    - content: Difficult Terrain doesn't slow your group's Travel
+    - content: Your group can't become lost except by magical means
+    - content: Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
+    - content: If you are traveling alone, you can move stealthily at a normal pace
+    - content: When you Forage, you find twice as much food as you normally would
+    - content: While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
     - title: Fighting Style
     - content: Archery. You gain a +2 bonus to attack rolls you make with ranged weapons.
     - title: Primeval Awareness
@@ -489,10 +489,10 @@ npc:
     - content: You have a +1 bonus to Attack and Damage Rolls made with this weapon.
     - title: Golden Breastplate
     - content: While wearing it, you have an extra +1 bonus to your AC, and your speed increases by 10 feet.
-               This armor has 5 charges. It regains 1d4 + 1 charges daily at dawn.
-               When you roll a Dexterity saving throw or you roll for initiative, you can expend 1 charge to gain advantage on that roll before you make it.
-               When you are hit by an attack, you can use your reaction to expend 2 charges and halve the damage you take from that attack, unless the damage is necrotic.
-               If you fail a saving throw, you can expend 4 charges to succeed instead.
+    - content: This armor has 5 charges. It regains 1d4 + 1 charges daily at dawn.
+    - content: When you roll a Dexterity saving throw or you roll for initiative, you can expend 1 charge to gain advantage on that roll before you make it.
+    - content: When you are hit by an attack, you can use your reaction to expend 2 charges and halve the damage you take from that attack, unless the damage is necrotic.
+    - content: If you fail a saving throw, you can expend 4 charges to succeed instead.
 
   profile:
 
