--- a/npcs/cedric_wrath.yaml
+++ b/npcs/cedric_wrath.yaml
@@ -465,15 +465,16 @@ npc:
   specialties:
     saving-throws:
     - Constitution
-    - Intelligence
+    - Wisdom
+    - Charisma
     damage-immunities:
-    - Necrotic
+    - N/A
     condition-immunities:
-    - Frightened, Charmed, Poisoned, Stunned
+    - N/A
     resistances:
-    - Fire, Poison, Cold, Lightning
+    - N/A
     skills:
-    - Leatherworking
+    - N/A
     proficiencies:
     - Arcana
     - Perception
