--- a/npcs/corrora_lillithium.yaml
+++ b/npcs/corrora_lillithium.yaml
@@ -469,13 +469,13 @@ npc:
     - Constitution
     - Wisdom
     damage-immunities:
-    - Necrotic
+    - N/A
     condition-immunities:
-    - Frightened, Charmed, Poisoned, Stunned
+    - Sleep Magic
     resistances:
-    - Fire, Poison, Cold, Lightning
+    - Charmed
     skills:
-    - Leatherworking
+    - Archeology
     proficiencies:
     - Arcana
     - Perception
