--- a/npcs/crusible_firepeak.yaml
+++ b/npcs/crusible_firepeak.yaml
@@ -471,7 +471,7 @@ npc:
     condition-immunities:
     - N/A
     resistances:
-    - bludgeoning, piercing, and slashing damage from nonmagical attacks while weraing heavy armor
+    - Bludgeoning, Piercing, and Slashing Damage from Nonmagical Attacks while Wearing Heavy Armor
     skills:
     - Metal Working
     proficiencies:
@@ -571,8 +571,8 @@ npc:
     - title: Saint of Forge and Fire
     - content: Your blessed affinity with fire and metal becomes more powerful; You gain immunity to fire damage. While wearing heavy armor, you have resistance to bludgeoning, piercing, and slashing damage 
                from nonmagical attacks.
-    - title: Feats
-    - content: Crusher, Durable, Grappler, Great Weapon Master, Mobile, Savage Attacker, Sentinel, War Caster
+  - title: Feats
+  - content: Crusher, Durable, Grappler, Great Weapon Master, Mobile, Savage Attacker, Sentinel, War Caster
   - title: Legendary Resistance
   - content: (3/Day), If Crusible Firepeak fails a saving throw he can choose to succeed instead
   - title: Legendary Actions
