--- a/npcs/cure.yaml
+++ b/npcs/cure.yaml
@@ -486,18 +486,18 @@ npc:
   - abilities: 
     - title: Constructed Resilience 
     - content: Advantage on saving throws against being poisoned and has resistance to poison damage
-               Doesn't need to eat, drink or breathe
-               Immune to disease
-               Doesn't need sleep and cannot be magically put to sleep
+    - content: Doesn't need to eat, drink or breathe
+    - content: Immune to disease
+    - content: Doesn't need sleep and cannot be magically put to sleep
     - title: Sentry's Rest
     - content: Long rest requires 6 hours in a motionless state, appearing inert, but can still see and hear as normal
     - title: Specialized Design
     - content: Proficient in Stealth and Thieve's Tools
     - title: Integrated Protection
     - content: Each time he finishes a long rest, can choose one mode to adopt from the integrated protection table
-               Darkwood Core - AC= 11 + Dexterity + Proficiency Bonus
-               Composite Plating - AC = 13 + Dexterity (Max 2) + Proficiency Bonus
-               Heavy Plating - AC = 16 + Proficiency Bonus, Disadvantage on Stealth checks
+    - content: Darkwood Core - AC= 11 + Dexterity + Proficiency Bonus
+    - content: Composite Plating - AC = 13 + Dexterity (Max 2) + Proficiency Bonus
+    - content: Heavy Plating - AC = 16 + Proficiency Bonus, Disadvantage on Stealth checks
   - title: Cleric Abilities
   - abilities:
   - title: Cleric Spellcasting
