--- a/npcs/hathunti.yaml
+++ b/npcs/hathunti.yaml
@@ -508,10 +508,10 @@ npc:
   - abilities: 
     - title: Firebug
     - content: You become exceptionally talented at setting things ablaze. You gain the following talents - 
-               Pyrotechnician - You may add your proficiency modifier to any ability check made to start or manipulate a fire, as well as determining the cause of one
-               Inflamable - You are considered proficient with improvised weapons when attacking with torches or any flaming object that can be held in one hand, as well as when throwing oil or similarly flamable compounds 
+    - content: Pyrotechnician - You may add your proficiency modifier to any ability check made to start or manipulate a fire, as well as determining the cause of one
+    - content: Inflamable - You are considered proficient with improvised weapons when attacking with torches or any flaming object that can be held in one hand, as well as when throwing oil or similarly flamable compounds 
                             and any type of fire-based explosive
-               Firestarter - Any creature or object covered in a combustable compound, such as oil, by you specifically, that takes any amount of fire damage will be set ablaze for a number of rounds equal to your
+    - content: Firestarter - Any creature or object covered in a combustable compound, such as oil, by you specifically, that takes any amount of fire damage will be set ablaze for a number of rounds equal to your
                              proficiency modifier. They will suffer 5hp of fire damage at the start of each of their turns for the duration or until it is extinguished 
     - title: Fleet Spark
     - content: You can use the bonus action granted by your Cunning Action to use a tinder box or other fire starting tool, or to throw a flask of oil or similiarly flamable compound at a target
