--- a/npcs/peace_fist.yaml
+++ b/npcs/peace_fist.yaml
@@ -496,9 +496,9 @@ npc:
     - content: Proficient in Stealth and Thieve's Tools
     - title: Integrated Protection
     - content: Each time he finishes a long rest, can choose one mode to adopt from the integrated protection table
-               Darkwood Core - AC= 11 + Dexterity + Proficiency Bonus
-               Composite Plating - AC = 13 + Dexterity (Max 2) + Proficiency Bonus
-               Heavy Plating - AC = 16 + Proficiency Bonus, Disadvantage on Stealth checks
+    - content: Darkwood Core - AC= 11 + Dexterity + Proficiency Bonus
+    - content: Composite Plating - AC = 13 + Dexterity (Max 2) + Proficiency Bonus
+    - content: Heavy Plating - AC = 16 + Proficiency Bonus, Disadvantage on Stealth checks
   - title: Skirmisher Traits
   - abilities:
     - title: Swift
@@ -555,9 +555,9 @@ npc:
   - abilities: 
     - title: Iron Mountain Technique
     - content: Whenever using Patient Defense or Step of the Wind can choose one of the following effects;
-               You have resistance to all forms of damage other than psychic damage until the start of your next turn
-               You gains a bonus to your AC equal to your strength modifier until the start of your next turn
-               You have advantage on ability checks and saving throws to resist being grappled, restrained, forcebly moved or knocked prone           
+    - content: You have resistance to all forms of damage other than psychic damage until the start of your next turn
+    - content: You gains a bonus to your AC equal to your strength modifier until the start of your next turn
+    - content: You have advantage on ability checks and saving throws to resist being grappled, restrained, forcebly moved or knocked prone           
     - title: Fists of Steel
     - content: When making an unarmed strike, your unarmed damage die increases to s d8. The die becomes at d10 at 11th Level and a d12 at 17th Level. Can choose to deal slashing, piercing or blugeoning damage with 
                unarmed strikes 
