--- a/npcs/thadeus_periwinkle.yaml
+++ b/npcs/thadeus_periwinkle.yaml
@@ -551,11 +551,11 @@ npc:
                When you create the cannon, you determine its appearance and whether it has legs. You also decide which type it is, choosing from the options on the Eldritch Cannons table. On each of your turns, you 
                can take a bonus action to cause the cannon to activate if you are within 60 feet of it. As part of the same bonus action, you can direct the cannon to walk or climb up to 15 feet to an unoccupied space,
                provided it has legs.
-               Flamethrower - The cannon exhales fire in an adjacent 15-foot cone that you designate. Each creature in that area must make a Dexterity saving throw against your spell save DC, taking 2d8 fire damage
+    - content: Flamethrower - The cannon exhales fire in an adjacent 15-foot cone that you designate. Each creature in that area must make a Dexterity saving throw against your spell save DC, taking 2d8 fire damage
                               on a failed save or half as much damage on a successful one. The fire ignites any flammable objects in the area that aren't being worn or carried.
-               Force Ballista-  Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature, 
+    - content: Force Ballista-  Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature, 
                                 it is pushed up to 5 feet away from the cannon.
-               Protector - The cannon emits a burst of positive energy that grants itself and each creature of your choice within 10 feet of it a number of temporary hit points equal to 1d8 + your Intelligence 
+    - content: Protector - The cannon emits a burst of positive energy that grants itself and each creature of your choice within 10 feet of it a number of temporary hit points equal to 1d8 + your Intelligence 
                            modifier (minimum of +1).           
     - title: Arcane Firearm
     - content: You know how to turn a wand, staff, or rod into an arcane firearm, a conduit for your destructive spells. When you finish a long rest, you can use woodcarver's tools to carve special sigils into a wand, 
@@ -564,9 +564,9 @@ npc:
                number rolled.
     - title: Explosive Cannon
     - content: every eldritch cannon you create is more destructive
-               The cannon's damage rolls all increase by 1d8.
-               As an action, you can command the cannon to detonate if you are within 60 feet of it. Doing so destroys the cannon and forces each creature within 20 feet of it to make a Dexterity saving throw 
-               against your spell save DC, taking 3d8 force damage on a failed save or half as much damage on a successful one. 
+    - content: The cannon's damage rolls all increase by 1d8.
+    - content: As an action, you can command the cannon to detonate if you are within 60 feet of it. Doing so destroys the cannon and forces each creature within 20 feet of it to make a Dexterity saving throw 
+               against your spell save DC, taking 3d8 force damage on a failed save or half as much damage on a successful one.
   - title: Ranger Abilities
   - abilities:
   - title: Ranger Spellcasting
@@ -581,12 +581,12 @@ npc:
     - content: Has advantage on Wisdom (Survival) checks to track her Favored enemies, as well as on Intelligence Checks to recall information about them
     - title: Natural Explorer 
     - content: Favored Terrain - Forest, Swamp
-               Difficult Terrain doesn't slow your group's Travel
-               Your group can't become lost except by magical means
-               Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
-               If you are traveling alone, you can move stealthily at a normal pace
-               When you Forage, you find twice as much food as you normally would
-               While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
+    - content: Difficult Terrain doesn't slow your group's Travel
+    - content: Your group can't become lost except by magical means
+    - content: Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
+    - content: If you are traveling alone, you can move stealthily at a normal pace
+    - content: When you Forage, you find twice as much food as you normally would
+    - content: While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
     - title: Fighting Style
     - content: Archery - You gain a +2 bonus to attack rolls you make with ranged weapons
     - title: Primeval Awareness
