--- a/npcs/the_carnelian_shroud.yaml
+++ b/npcs/the_carnelian_shroud.yaml
@@ -473,13 +473,13 @@ npc:
     - Charisma
     - Intelligence
     damage-immunities:
-    - Necrotic
+    - N/A
     condition-immunities:
-    - Frightened, Charmed, Poisoned, Stunned
+    - N/A
     resistances:
-    - Fire, Poison, Cold, Lightning
+    - N/A
     skills:
-    - Leatherworking
+    - Acting
     proficiencies:
     - Insight
     - Perception
