--- a/npcs/urreeek.yaml
+++ b/npcs/urreeek.yaml
@@ -491,9 +491,10 @@ npc:
   - title: Fighter Abilities
   - abilities:
     - title: Fighting Style
-    - content:
+    - content: Thrown Weapon Fighting - You can draw a weapon that has the thrown property as part of the attack you make with the weapon.
+                                        In addition, when you hit with a ranged attack using a thrown weapon, you gain a +2 bonus to the damage roll.
     - title: Second Wind
-    - content: Bonus Action to regain 1d10 + 
+    - content: Bonus Action to regain 1d10 + 5
     - title: Action Surge
     - content: Once every short/long rest can take an extra action
     - title: Extra Attack
