--- a/npcs/zirrashka_brrek.yaml
+++ b/npcs/zirrashka_brrek.yaml
@@ -570,18 +570,18 @@ npc:
     - content: Your mastery of your ki allows you to summon a portion of your astral self. As a bonus action, you can spend 1 ki point to summon the arms of your astral self. When you do so, each creature of 
                your choice that you can see within 10 feet of you must succeed on a Dexterity saving throw or take force damage equal to two rolls of your Martial Arts die. For 10 minutes, these spectral arms 
                hover near your shoulders or surround your arms (your choice). You determine the arms' appearance, and they vanish early if you are incapacitated or die.
-               While the spectral arms are present, you gain the following benefits - 
-               You can use your Wisdom modifier in place of your Strength modifier when making Strength checks and Strength saving throws.
-               You can use the spectral arms to make unarmed strikes.
-               When you make an unarmed strike with the arms on your turn, your reach for it is 5 feet greater than normal.
-               The unarmed strikes you make with the arms can use your Wisdom modifier in place of your Strength or Dexterity modifier for the attack and damage rolls, and their damage type is force.
+    - content: While the spectral arms are present, you gain the following benefits - 
+    - content: You can use your Wisdom modifier in place of your Strength modifier when making Strength checks and Strength saving throws.
+    - content: You can use the spectral arms to make unarmed strikes.
+    - content: When you make an unarmed strike with the arms on your turn, your reach for it is 5 feet greater than normal.
+    - content: The unarmed strikes you make with the arms can use your Wisdom modifier in place of your Strength or Dexterity modifier for the attack and damage rolls, and their damage type is force.
     - title: Visage of the Astral Self
     - content: You can summon the visage of your astral self. As a bonus action, or as part of the bonus action you take to activate Arms of the Astral Self, you can spend 1 ki point to summon this visage 
                for 10 minutes. It vanishes early if you are incapacitated or die. The spectral visage covers your face like a helmet or mask. You determine its appearance. While the spectral visage is 
                present, you gain the following benefits.
-               Astral Sight - You can see normally in darkness, both magical and nonmagical, to a distance of 120 feet.
-               Wisdom of the Spirit - You have advantage on Wisdom (Insight) and Charisma (Intimidation) checks.
-               Word of the Spirit - When you speak, you can direct your words to a creature of your choice that you can see within 60 feet of you, making it so only that creature can hear you. Alternatively,
+    - content: Astral Sight - You can see normally in darkness, both magical and nonmagical, to a distance of 120 feet.
+    - content: Wisdom of the Spirit - You have advantage on Wisdom (Insight) and Charisma (Intimidation) checks.
+    - content: Word of the Spirit - When you speak, you can direct your words to a creature of your choice that you can see within 60 feet of you, making it so only that creature can hear you. Alternatively,
                                     you can amplify your voice so that all creatures within 600 feet can hear you.
 
   - title: Feats
@@ -599,9 +599,9 @@ npc:
     - title: Decanter of Endless Water
     - content: This stoppered flask sloshes when shaken, as if it contains water. The decanter weighs 2 pounds. You can use an action to remove the stopper and speak one of three Command words, whereupon an 
                amount of fresh water or salt water (your choice) pours out of the flask. The water stops pouring out at the start of your next turn. Choose from the following options - 
-               Stream - produces 1 gallon of water.
-               Fountain - produces 5 gallons of water.
-               Geyser - produces 30 gallons of water that gushes forth in a geyser 30 feet long and 1 foot wide. As a Bonus Action while holding the decanter, you can aim the geyser at a creature you can see 
+    - content: Stream - produces 1 gallon of water.
+    - content: Fountain - produces 5 gallons of water.
+    - content: Geyser - produces 30 gallons of water that gushes forth in a geyser 30 feet long and 1 foot wide. As a Bonus Action while holding the decanter, you can aim the geyser at a creature you can see 
                within 30 feet of you. The target must succeed on a DC 13 Strength saving throw or take 1d4 bludgeoning damage and fall prone. Instead of a creature, you can target an object that isn't
                being worn or carried and that weighs no more than 200 pounds. The object is either knocked over or pushed up to 15 feet away from you.  
     - title: Quill of Acurate Writing
