--- a/npcs/gerhardt_klippstein.yaml
+++ b/npcs/gerhardt_klippstein.yaml
@@ -552,12 +552,12 @@ npc:
                choice.
     - title: Arcane Armor
     - contnet: Your metallurgical pursuits have led to you making armor a conduit for your magic. As an action, you can turn a suit of armor you are wearing into Arcane Armor, provided you have smith's tools in hand. 
-               You gain the following benefits while wearing this armor;
-               If the armor normally has a Strength requirement, the arcane armor lacks this requirement for you.
-               You can use the arcane armor as a spellcasting focus for your artificer spells.
-               The armor attaches to you and can’t be removed against your will. It also expands to cover your entire body, although you can retract or deploy the helmet as a bonus action. The armor replaces any 
+    - content: You gain the following benefits while wearing this armor;
+    - content: If the armor normally has a Strength requirement, the arcane armor lacks this requirement for you.
+    - content: You can use the arcane armor as a spellcasting focus for your artificer spells.
+    - content: The armor attaches to you and can’t be removed against your will. It also expands to cover your entire body, although you can retract or deploy the helmet as a bonus action. The armor replaces any 
                missing limbs, functioning identically to a body part it is replacing.
-               The armor continues to be Arcane Armor until you don another suit of armor or you die.
+    - content: The armor continues to be Arcane Armor until you don another suit of armor or you die.
     - title: Armor Model
     - content: You can customize your Arcane Armor. When you do so, choose one of the following armor models; Guardian or Infiltrator. The model you choose gives you special benefits while you wear it. Each model includes
                a special weapon. When you attack with that weapon, you can add your Intelligence modifier, instead of Strength or Dexterity, to the attack and damage rolls. You can change the armor's model whenever you 
@@ -572,10 +572,10 @@ npc:
                doff the armor. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
     - title: Infiltrator
     - content: You customize your armor for subtle undertakings. It has the following features;
-               Lightning Launcher - A gemlike node appears on one of your armored fists or on the chest (your choice). It counts as a simple ranged weapon, with a normal range of 90 feet and a long range of 300 feet, 
+    - content: Lightning Launcher - A gemlike node appears on one of your armored fists or on the chest (your choice). It counts as a simple ranged weapon, with a normal range of 90 feet and a long range of 300 feet, 
                                     and it deals 1d6 lightning damage on a hit. Once on each of your turns when you hit a creature with it, you can deal an extra 1d6 lightning damage to that target.
-               Powered Steps - Your walking speed increases by 5 feet.
-               Dampening Field - You have advantage on Dexterity (Stealth) checks. If the armor normally imposes disadvantage on such checks, the advantage and disadvantage cancel each other, as normal.  
+    - content: Powered Steps - Your walking speed increases by 5 feet.
+    - content: Dampening Field - You have advantage on Dexterity (Stealth) checks. If the armor normally imposes disadvantage on such checks, the advantage and disadvantage cancel each other, as normal.  
     - title: Extra Attack
     - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
     - title: Armor Modifications
@@ -584,10 +584,10 @@ npc:
                addition, the maximum number of items you can infuse at once increases by 2, but those extra items must be part of your Arcane Armor.
     - title: Perfected Armor
     - content: Your Arcane Armor gains additional benefits based on its model, as shown below.
-               Guardian - When a Huge or smaller creature you can see ends its turn within 30 feet of you, you can use your reaction to magically force the creature to make a Strength saving throw against your spell 
+    - content: Guardian - When a Huge or smaller creature you can see ends its turn within 30 feet of you, you can use your reaction to magically force the creature to make a Strength saving throw against your spell 
                           save DC, pulling the creature up to 30 feet toward you to an unoccupied space. If you pull the target to a space within 5 feet of you, you can make a melee weapon attack against it as part of 
                           this reaction. You can use this reaction a number of times equal to your proficiency bonus, and you regain all expended uses of it when you finish a long rest.
-               Infiltrator - Any creature that takes lightning damage from your Lightning Launcher glimmers with magical light until the start of your next turn. The glimmering creature sheds dim light in a 5-foot 
+    - content: Infiltrator - Any creature that takes lightning damage from your Lightning Launcher glimmers with magical light until the start of your next turn. The glimmering creature sheds dim light in a 5-foot 
                              radius, and it has disadvantage on attack rolls against you, as the light jolts it if it attacks you. In addition, the next attack roll against it has advantage, and if that attack hits, 
                              the target takes an extra 1d6 lightning damage.
   - title: Feats
