--- a/npcs/gleadric_or_cujulo.yaml
+++ b/npcs/gleadric_or_cujulo.yaml
@@ -512,10 +512,10 @@ npc:
     - content: Life Transference
     - title: Sacred Technique 
     - content: This focus grants you innate bonuses depending on your choice of focus
-               Body - Your hit point max increases by 1 each level
-               Mind - When you make an intelligence-based ability check or saving throw, you can choose to use your wisdon score instead of your intelligence
-               Heart - When you make a saving throw you can choose to have advantage or disadvantage on it. The next saving throw you make has to be the opposite
-               Soul - When wearing no armor your AC = 10 + your Dexterity + your Wisdom.
+    - content: Body - Your hit point max increases by 1 each level
+    - content: Mind - When you make an intelligence-based ability check or saving throw, you can choose to use your wisdon score instead of your intelligence
+    - content: Heart - When you make a saving throw you can choose to have advantage or disadvantage on it. The next saving throw you make has to be the opposite
+    - content: Soul - When wearing no armor your AC = 10 + your Dexterity + your Wisdom.
     - title: Totemic Magic
     - content: You Learn the Art of making Totems through which you channel shamanistic power. 
     - title: Totems Known
