--- a/npcs/glem_the_durable_shill.yaml
+++ b/npcs/glem_the_durable_shill.yaml
@@ -529,9 +529,9 @@ npc:
     - content: You've learned how to create a disposable, albeit unstable alchemical device for use in your performances. Whenever you finish a short or long rest, you can create an alchemical capsule that
                becomes inert after your next rest. As a bonus action, or as a reaction when you are attacked or are forced to make a saving throw, you can throw the capsule at a space within 30 feet of you
                that doesn't have total cover from you. The capsule disintegrates there, producing one of the following effects of your choice
-               Smoke - Smoke spreads from the capsule in a 20-foot-radius sphere that moves around comers. The area of the smoke is heavily obscured and persists until the end of your next turn, or until a 
+    - content: Smoke - Smoke spreads from the capsule in a 20-foot-radius sphere that moves around comers. The area of the smoke is heavily obscured and persists until the end of your next turn, or until a 
                        strong wind disperses it
-               Fireworks - Each creature in a 10-foot-radius s phere of the capsule must succeed on a Constitution saving throw against a DC equal to 8 + your proficiency bonus + your Charisma modifier or 
+    - content: Fireworks - Each creature in a 10-foot-radius s phere of the capsule must succeed on a Constitution saving throw against a DC equal to 8 + your proficiency bonus + your Charisma modifier or 
                            become blinded and deafened until the end of your next turn. 
  
   - title: Attacks
@@ -543,8 +543,8 @@ npc:
   - abilities:
     - title: Gloves of Fast Draw
     - content: Gloves of fast draw can teleport any item on your person to your hand.
-               Attunement may be necessary. Grip the items you want to fast draw. Hold them the way you want them to appear in your hand, and say the command word "remember".
-               Any time after an item has been attuned, it can be reflexively teleported to your hand. Note - The item must be on your person for this to work.
+    - content: Attunement may be necessary. Grip the items you want to fast draw. Hold them the way you want them to appear in your hand, and say the command word "remember".
+    - content: Any time after an item has been attuned, it can be reflexively teleported to your hand. Note - The item must be on your person for this to work.
     - title: Contraband Concealment Container
     - content: When this item is created the creator selects a material - spice, coin, or any other mundane material and a command word. The container has a seemingly endless source of whatever mundane
                object is selected though it deteriorates from existence within a day of being removed from the container. When the command word is spoken and the container is opened it reveals completely
