--- a/npcs/glotys_thwamp.yaml
+++ b/npcs/glotys_thwamp.yaml
@@ -468,13 +468,13 @@ npc:
     - Constitution
     - Intelligence
     damage-immunities:
-    - Necrotic
+    - N/A
     condition-immunities:
-    - Frightened, Charmed, Poisoned, Stunned
+    - N/A
     resistances:
-    - Fire, Poison, Cold, Lightning
+    - N/A
     skills:
-    - Leatherworking
+    - Apiary
     proficiencies:
     - Animal Handling
     - Nature
@@ -508,12 +508,12 @@ npc:
     - content: Has advantage on Wisdom (Survival) checks to track her Favored enemies, as well as on Intelligence Checks to recall information about them
     - title: Natural Explorer 
     - content: Favored Terrain - Forest and Plains
-               Difficult Terrain doesn't slow your group's Travel
-               Your group can't become lost except by magical means
-               Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
-               If you are traveling alone, you can move stealthily at a normal pace
-               When you Forage, you find twice as much food as you normally would
-               While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
+    - content: Difficult Terrain doesn't slow your group's Travel
+    - content: Your group can't become lost except by magical means
+    - content: Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
+    - content: If you are traveling alone, you can move stealthily at a normal pace
+    - content: When you Forage, you find twice as much food as you normally would
+    - content: While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
     - title: Fighting Style
     - content: Archery - You gain a +2 bonus to attack rolls you make with ranged weapons.
     - title: Primeval Awareness
