--- a/npcs/huber.yaml
+++ b/npcs/huber.yaml
@@ -527,7 +527,7 @@ npc:
                item, but does not count toward your maximum number of infused items. When you finish a long rest, you can touch a magic or nonmagical simple or martial melee weapon, which becomes your ghaal’shaarat.
                Once imbued, your ghaal’shaarat is a magic weapon that grants a +1 bonus to attack and damage rolls, unless the base weapon you imbued already grants a higher bonus. This bonus increases when you reach certain 
                levels in this class, increasing to +2 at 8th level and +3 at 13th level. If the weapon you imbued has the thrown property, it returns to your hand immediately after it is used to make a ranged attack.
-               Your ghaal’shaarat’s benefits remain until the weapon is destroyed or until you use this ability to imbue a new item with this power. Other creatures can’t benefit from your ghaal’shaarat’s powers, and to them, it
+    - content: Your ghaal’shaarat’s benefits remain until the weapon is destroyed or until you use this ability to imbue a new item with this power. Other creatures can’t benefit from your ghaal’shaarat’s powers, and to them, it
                functions as the unimbued weapon did.
      
   - title: Feats
