--- a/npcs/llewellyn_broadlore.yaml
+++ b/npcs/llewellyn_broadlore.yaml
@@ -528,10 +528,10 @@ npc:
     - title: The Third Eye
     - content: You can use your action to increase your powers of perception. When you do so, choose one of the following benefits, which lasts until you are incapacitated or you take a short or long rest. You can't
                use the feature again until you finish a short or long rest.
-               Darkvision - You gain darkvision out to a range of 60 feet.
-               Ethereal Sight - You can see into the Ethereal Plane within 60 feet of you.
-               Greater Comprehension - You can read any language.
-               See Invisibility - You can see invisible creatures and objects within 10 feet of you that are within line of sight
+    - content: Darkvision - You gain darkvision out to a range of 60 feet.
+    - content: Ethereal Sight - You can see into the Ethereal Plane within 60 feet of you.
+    - content: Greater Comprehension - You can read any language.
+    - content: See Invisibility - You can see invisible creatures and objects within 10 feet of you that are within line of sight
 
   - title: Feats
   - content: Keen Mind 
