--- a/npcs/lorne_stronghammer.yaml
+++ b/npcs/lorne_stronghammer.yaml
@@ -494,7 +494,8 @@ npc:
   - title: Fighter Abilities
   - abilities:
     - title: Fighting Style
-    - content:
+    - content: Great Weapon Fighting - When you roll a 1 or 2 on a damage die for an attack you make with a melee weapon that you are wielding with two hands, you can reroll the die and must use the new roll, even if the new 
+               roll is a 1 or a 2. The weapon must have the two-handed or versatile property for you to gain this benefit.
     - title: Second Wind
     - content: Bonus Action to regain 1d10 + 
     - title: Action Surge
