--- a/npcs/mykos_regaltha.yaml
+++ b/npcs/mykos_regaltha.yaml
@@ -555,31 +555,31 @@ npc:
                You can use an action to choose one creature you can see within 30 feet of you (this can be you) to be the target of the tale’s effect. Once you do so, you can’t bestow the tale’s effect again until 
                you roll it again. You can retain only one of these tales in mind at a time, and rolling on the Spirit Tales table immediately ends the effect of the previous tale. If the tale requires a saving throw,
                he DC equals your spell save DC.
-               SPIRIT TALES TABLE
-               Bardic Insp. Die      Tale Told Through You
-               1                     Tale of the Clever Animal. For the next 10 minutes, whenever the target makes an Intelligence, a Wisdom, or a Charisma check, the target can roll an extra die immediately after 
+    - content: SPIRIT TALES TABLE
+    - content: Bardic Insp. Die      Tale Told Through You
+    - content: 1                     Tale of the Clever Animal. For the next 10 minutes, whenever the target makes an Intelligence, a Wisdom, or a Charisma check, the target can roll an extra die immediately after 
                                      rolling the d20 and add the extra die's number to the check. The extra die is the same type as your Bardic Inspiration die.
-               2                     Tale of the Renowned Duelist. You make a melee spell attack against the target. On a hit, the target takes force damage equal to two rolls of your Bardic Inspiration die + your 
+    - content: 2                     Tale of the Renowned Duelist. You make a melee spell attack against the target. On a hit, the target takes force damage equal to two rolls of your Bardic Inspiration die + your 
                                      Charisma modifier.
-               3                     Tale of the Beloved Friends. The target and another creature of its choice it can see within 5 feet of it gains temporary hit points equal to a roll of your Bardic Inspiration 
+    - content: 3                     Tale of the Beloved Friends. The target and another creature of its choice it can see within 5 feet of it gains temporary hit points equal to a roll of your Bardic Inspiration 
                                      die + your Charisma modifier
-               4                     Tale of the Runaway. The target can immediately use its reaction to teleport up to 30 feet to an unoccupied space it can see. When the target teleports, it can choose a number of
+    - content: 4                     Tale of the Runaway. The target can immediately use its reaction to teleport up to 30 feet to an unoccupied space it can see. When the target teleports, it can choose a number of
                                      creatures it can see within 30 feet of it up to your Charisma modifier (minimum of 0) to immediately use the same reaction.
-               5                     Tale of the Avenger. For 1 minute, any creature that hits the target with a melee attack takes force damage equal to a roll of your Bardic Inspiration die.
-               6                     Tale of the Traveler. The target gains temporary hit points equal to a roll of your Bardic Inspiration die + your bard level. While it has these temporary hit points, the 
+    - content: 5                     Tale of the Avenger. For 1 minute, any creature that hits the target with a melee attack takes force damage equal to a roll of your Bardic Inspiration die.
+    - content: 6                     Tale of the Traveler. The target gains temporary hit points equal to a roll of your Bardic Inspiration die + your bard level. While it has these temporary hit points, the 
                                      target’s walking speed increases by 10 feet and it gains a +1 bonus to its AC.
-               7                     Tale of the Beguiler. The target must succeed on a Wisdom saving throw or take psychic damage equal to two rolls of your Bardic Inspiration die, and the target is incapacitated 
+    - content: 7                     Tale of the Beguiler. The target must succeed on a Wisdom saving throw or take psychic damage equal to two rolls of your Bardic Inspiration die, and the target is incapacitated 
                                      until the end of its next turn.
-               8                     Tale of the Phantom. The target becomes invisible until the end of its next turn or until it hits a creature with an attack. If it hits a creature with an attack during this 
+    - content: 8                     Tale of the Phantom. The target becomes invisible until the end of its next turn or until it hits a creature with an attack. If it hits a creature with an attack during this 
                                      invisibility, the creature it hits takes necrotic damage equal to a roll of your Bardic Inspiration die and is frightened of the target until the end of the frightened creature's
                                      next turn.
-               9                     Tale of the Brute. Each creature of the target’s choice it can see within 30 feet of it must make a Strength saving throw. On a failed save, a creature takes thunder damage equal
+    - content: 9                     Tale of the Brute. Each creature of the target’s choice it can see within 30 feet of it must make a Strength saving throw. On a failed save, a creature takes thunder damage equal
                                      to three rolls of your Bardic Inspiration die and is knocked prone. A creature that succeeds on its saving throw takes half as much damage and isn’t knocked prone.
-               10                    Tale of the Dragon. The target spews fire from the mouth in a 30-foot cone. Each creature in that area must make a Dexterity saving throw, taking fire damage equal to four rolls 
+    - content: 10                    Tale of the Dragon. The target spews fire from the mouth in a 30-foot cone. Each creature in that area must make a Dexterity saving throw, taking fire damage equal to four rolls 
                                      of your Bardic Inspiration die on a failed save, or half as much damage on a successful one.
-               11                    Tale of the Angel. The target regains hit points equal to two rolls of your Bardic Inspiration die + your Charisma modifier, and you end one condition from the following list 
+    - content: 11                    Tale of the Angel. The target regains hit points equal to two rolls of your Bardic Inspiration die + your Charisma modifier, and you end one condition from the following list 
                                      affecting the target; blinded, deafened, paralyzed, petrified, or poisoned.
-               12                    Tale of the Mind-Bender You envoke an incomprehensible fable from an otherworldly being. The target must succeed on an Intelligence saving throw or take psychic damage equal to 
+    - content: 12                    Tale of the Mind-Bender You envoke an incomprehensible fable from an otherworldly being. The target must succeed on an Intelligence saving throw or take psychic damage equal to 
                                      three rolls of your Bardic Inspiration die and be stunned until the end of its next turn.
 
   - title: Feats 
