--- a/npcs/nagata.yaml
+++ b/npcs/nagata.yaml
@@ -524,10 +524,10 @@ npc:
     - title: Staff of Charming
     - content: While holding this staff, you can use an action to expend 1 of its 10 Charges to cast Charm Person, Command, or comprehend Languages from it using your spell save DC. The staff can also be used as a magic 
                Quarterstaff.
-               If you are holding the staff and fail a saving throw against an Enchantment spell that Targets only you, you can turn your failed save into a successful one. You can't use this property of the staff again until 
+    - content: If you are holding the staff and fail a saving throw against an Enchantment spell that Targets only you, you can turn your failed save into a successful one. You can't use this property of the staff again until 
                the next dawn. If you succeed on a save against an Enchantment spell that Targets only you, with or without the staff's intervention, you can use your Reaction to expend 1 charge from the staff and turn the spell 
                back on its caster as if you had cast the spell.
-               The staff regains 1d8 + 2 expended Charges daily at dawn. If you expend the last charge, roll a d20. On a 1, the staff becomes a nonmagical Quarterstaff.
+    - content: The staff regains 1d8 + 2 expended Charges daily at dawn. If you expend the last charge, roll a d20. On a 1, the staff becomes a nonmagical Quarterstaff.
     
       
   profile:
