--- a/npcs/narmanaleth.yaml
+++ b/npcs/narmanaleth.yaml
@@ -526,14 +526,14 @@ npc:
     - title: Ironwood Skin
     - content: While you are not wearing any armor, your Armor Class equals 10 + your Wisdom modifier + your Constitution modifier. You can use a shield and still gain this benefit
     - title: Natural Explorer 
-    - content: Favored Terrain - You can choose one type of terrain; arctic, coast, desert, forest, grassland, mountain, or swamp. When you make an Intelligence or Wisdom check related to your favored terrain, your proficiency bonus is doubled if you are using a skill that you are proficient.
-               While traveling for an hour or more in your favored terrain, you gain the following benefits - 
-               Difficult terrain doesn’t slow your group’s travel.
-               Your group can’t become lost except by magical means.
-               Even when you are engaged in another activity while traveling (such as foraging, navigating, or tracking), you remain alert to danger.
-               If you are traveling alone, you can move stealthily at a normal pace.
-               When you forage, you find twice as much food as you normally would.
-               While tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
+    - content: Favored Terrain - Forest and Mountains
+    - content: While traveling for an hour or more in your favored terrain, you gain the following benefits - 
+    - content: Difficult Terrain doesn't slow your group's Travel
+    - content: Your group can't become lost except by magical means
+    - content: Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
+    - content: If you are traveling alone, you can move stealthily at a normal pace
+    - content: When you Forage, you find twice as much food as you normally would
+    - content: While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
     - title: Spirit Sight
     - content: You gain an uncanny sense of when things nearby aren’t as they should be, giving you an edge when you dodge away from danger. You have advantage on Dexterity saving throws against effects that you can see,
                such as traps and spells. To gain this benefit, you can’t be blinded, deafened, or incapacitated
@@ -579,8 +579,8 @@ npc:
   - abilities:
     - title: Wild Talent 
     - content: You also harbor a wellspring of psionic power within yourself, an energy that ebbs and flows as you channel it in various ways. This power is represented by your Psionic Talent die
-               Psionic Talent Die = d12
-               Psionic Talent Options
+    - content: Psionic Talent Die = d12
+    - content: Psionic Talent Options
     - title: Psi-Boosted Ability
     - content: When you make an ability check with the ability increased by this feat, you can roll your Psionic Talent die and add the number rolled to the check. You can choose to do so before
                or after rolling the d20, but before you know whether the check succeeded or failed.
@@ -598,20 +598,20 @@ npc:
     - content: As a bonus action, you can calm your mind for a moment and restore your Psionic Talent die to its starting size. You then can’t use Psi Replenishment again until you finish a long rest.
     - title: Metabolic Control 
     - content: You have refined psionic control over your body’s functions. You gain the following benefits -
-               If your Psionic Talent die is available, you can take an action to channel your psionic power to nourish yourself for the next 24 hours, as if you consumed sufficient food and water for a day. When you take this
+    - content: If your Psionic Talent die is available, you can take an action to channel your psionic power to nourish yourself for the next 24 hours, as if you consumed sufficient food and water for a day. When you take this
                action, your Psionic Talent die decreases by one die size.
-               If your Psionic Talent die is available, you can meditate for 1 minute, at the end of which you gain the benefits of finishing a short rest, and your Psionic Talent die decreases by one die
+    - content: If your Psionic Talent die is available, you can meditate for 1 minute, at the end of which you gain the benefits of finishing a short rest, and your Psionic Talent die decreases by one die
     - title: Telekinetic
     - content: You learn to move things with your mind. You gain the following benefits -
-               You learn the mage hand cantrip. You can cast it without verbal or somatic components, and you can make the spectral hand invisible. If you already know this spell, its range increases by 30 feet when you cast it. 
-               Its spellcasting ability is the ability increased by this feat.
-               As a bonus action, you can try to telekinetically shove one creature you can see within 30 feet of you. When you do so, roll your Psionic Talent die, and the target must succeed on a Strength saving throw (DC 8 + your
+    - content: You learn the mage hand cantrip. You can cast it without verbal or somatic components, and you can make the spectral hand invisible. If you already know this spell, its range increases by 30 feet when you cast it. 
+    - content: Its spellcasting ability is the ability increased by this feat.
+    - content: As a bonus action, you can try to telekinetically shove one creature you can see within 30 feet of you. When you do so, roll your Psionic Talent die, and the target must succeed on a Strength saving throw (DC 8 + your
                proficiency bonus + the ability modifier of the score increased by this feat) or be moved toward you or away from you a number of feet equal to 5 times the number you rolled. A creature can willingly fail this save
     - title: Telepathic
     - content: You awaken the ability to mentally connect with others. You gain the following benefits -.
-               You can speak telepathically to any creature you can see within 30 feet of you. Your telepathic utterances are in a language you know, and the creature understands you only if it knows that language. Your
+    - content: You can speak telepathically to any creature you can see within 30 feet of you. Your telepathic utterances are in a language you know, and the creature understands you only if it knows that language. Your
                communication doesn’t give the creature the ability to respond to you telepathically.
-               If your Psionic Talent die is available, you can cast the detect thoughts spell, requiring no components. When you start casting the spell, your Psionic Talent die decreases by one die size. Your spellcasting ability
+    - content: If your Psionic Talent die is available, you can cast the detect thoughts spell, requiring no components. When you start casting the spell, your Psionic Talent die decreases by one die size. Your spellcasting ability
                for the spell is the ability increased by this feat.
     - title: Tower of Iron Will
     - content: Your mind’s defenses are formidable. After you or another creature you can see within 30 feet of you fails a saving throw, you can use your reaction to roll your Psionic Talent die and add the number
@@ -631,10 +631,10 @@ npc:
     - content: This staff can be wielded as a magic Quarterstaff that grants a +2 bonus to Attack and Damage Rolls made with it. While holding it, you have a +2 bonus to spell Attack Rolls. The staff has 10
                Charges for the following Properties. It regains 1d6 + 4 expended Charges daily at dawn. If you expend the last charge, roll a d20. On a 1, the staff loses its Properties and becomes a nonmagical
                Quarterstaff.
-               Spells - You can use an action to expend 1 or more of the staff's Charges to cast one of the following Spells from it, using your spell save DC - Animal Friendship (1 charge), Awaken (5 charges),
+    - content: Spells - You can use an action to expend 1 or more of the staff's Charges to cast one of the following Spells from it, using your spell save DC - Animal Friendship (1 charge), Awaken (5 charges),
                         Barkskin (2 charges), Locate Animals or Plants (2 charges), Speak with Animals (1 charge), Speak with Plants (3 charges), or Wall of Thorns (6 charges).
                         You can also use an action to cast the Pass without Trace spell from the staff without using any Charges.
-               Tree Form - You can use an action to plant one end of the staff in fertile earth and expend 1 charge to transform the staff into a healthy tree. The tree is 60 feet tall and has a 5-foot-diameter
+    - content: Tree Form - You can use an action to plant one end of the staff in fertile earth and expend 1 charge to transform the staff into a healthy tree. The tree is 60 feet tall and has a 5-foot-diameter
                            trunk, and its branches at the top spread out in a 20-foot radius. The tree appears ordinary but radiates a faint aura of Transmutation magic if targeted by Detect Magic. While
                            touching the tree and using another action to speak its Command, word, you return the staff to its normal form. Any creature in the tree falls when it reverts to a staff. 
     - title: Statue of Wondrous Power
@@ -644,11 +644,11 @@ npc:
                Lugdana by a giant raven—or an angel in the form of a giant raven. Lugdana used the holy symbol to root out and destroy nests of vampires until her death. The high priests of Ravenloft kept
                and wore the holy symbol after Lugdana's passing. The holy symbol is a platinum amulet shaped like the sun, with a large crystal embedded in its center. The holy symbol has 10 charges for the
                following properties. It regains 1d6 + 4 charges daily at dawn.
-               Hold Vampires - As an action, you can expend 1 charge and present the holy symbol to make it flare with holy power. Vampires and vampire spawn within 30 feet of the holy symbol when it flares
+    - content: Hold Vampires - As an action, you can expend 1 charge and present the holy symbol to make it flare with holy power. Vampires and vampire spawn within 30 feet of the holy symbol when it flares
                                must make a DC 15 Wisdom saving throw. On a failed save, a target is paralyzed for 1 minute. It can repeat the saving throw at the end of its turns to end the effect on itself.
-               Turn Undead - If you have the Turn Undead or the Turn the Unholy feature, you can expend 3 charges when you present the holy symbol while using that feature. When you do so, undead have
+    - content: Turn Undead - If you have the Turn Undead or the Turn the Unholy feature, you can expend 3 charges when you present the holy symbol while using that feature. When you do so, undead have
                              disadvantage on their saving throws against the effect.
-               Sunlight - As an action, you can expend 5 charges while presenting the holy symbol to make it shed bright light in a 30-foot radius and dim light for an additional 30 feet. The light is sunlight
+    - content: Sunlight - As an action, you can expend 5 charges while presenting the holy symbol to make it shed bright light in a 30-foot radius and dim light for an additional 30 feet. The light is sunlight
                           and lasts for 10 minutes or until you end the effect (no action required).
 
   profile:
