--- a/npcs/oswald_vardklemp.yaml
+++ b/npcs/oswald_vardklemp.yaml
@@ -499,10 +499,10 @@ npc:
     - content: You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
                after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
                to three such devices active at a time. When you create a device, choose one of the following options - 
-               Clockwork Toy - This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
+    - content: Clockwork Toy - This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
                                a random direction. It makes noises as appropriate to the creature it represents.
-               Fire Starter - The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
-               Music Box - When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.
+    - content: Fire Starter - The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
+    - content: Music Box - When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.
   - title: Artificer Abilities
   - abilities:
     - title: Magical Tinkering
@@ -571,26 +571,27 @@ npc:
                not just Dodge. If the Mending spell is cast on it, it regains 2d6 hit points. If it has died within the last hour, you can use your smith's tools as an action to revive it, provided you are within 5 
                feet of it and you expend a spell slot of 1st level or higher. The steel defender returns to life after 1 minute with all its hit points restored. At the end of a long rest, you can create a new steel 
                defender if you have smith's tools with you. If you already have a defender from this feature, the first one immediately perishes. The defender also perishes if you die.                          
-               
-               Steel Defender - Medium construct
-               Armor Class - 15 (natural armor)
-               Stats - STR 14(+2) DEX 12(+1) CON 14(+2) INT 4(−3) WIS 10(+0) CHA 6(−2) 
-               Hit Points - 2 + your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
-               Speed - 40 ft.     
-               Saving Throws - Dex +1 plus PB, Con +2 plus PB
-               Skills - Athletics +2 plus PB, Perception +0 plus PB x 2
-               Damage Immunities - poison
-               Condition Immunities - charmed, exhaustion, poisoned
-               Senses - Darkvision 60 ft., Passive Perception 10 + (PB x 2)
-               Languages - understands the languages you speak
-               Challenge —
-               Proficiency Bonus (PB) - equals your bonus
-               Vigilant - The defender can't be surprised.
-               Actions -
-               Force-Empowered Rend. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target you can see. Hit 1d8 + PB force damage.
-               Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.
-               Reactions -
-               Deflect Attack - The defender imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it, provided the attack roll is against a creature other than the defender.
+    - content: 
+    - content: Steel Defender - Medium construct
+    - content: Armor Class - 15 (natural armor)
+    - content: Stats - STR 14(+2) DEX 12(+1) CON 14(+2) INT 4(−3) WIS 10(+0) CHA 6(−2) 
+    - content: Hit Points - 2 + your Intelligence modifier + 5 times your artificer level (the defender has a number of Hit Dice [d8s] equal to your artificer level)
+    - content: Speed - 40 ft.     
+    - content: Saving Throws - Dex +1 plus PB, Con +2 plus PB
+    - content: Skills - Athletics +2 plus PB, Perception +0 plus PB x 2
+    - content: Damage Immunities - poison
+    - content: Condition Immunities - charmed, exhaustion, poisoned
+    - content: Senses - Darkvision 60 ft., Passive Perception 10 + (PB x 2)
+    - content: Languages - understands the languages you speak
+    - content: Challenge —
+    - content: Proficiency Bonus (PB) - equals your bonus
+    - content: Vigilant - The defender can't be surprised.
+    - content: Actions -
+    - content: Force-Empowered Rend. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target you can see. Hit 1d8 + PB force damage.
+    - content: Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.
+    - content: Reactions -
+    - content: Deflect Attack - The defender imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it, provided the attack roll is against a creature other than the defender.
+    - content: Intimidate - It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
 
     - title: Extra Attack
     - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
