--- a/npcs/sister_uriah_quartz.yaml
+++ b/npcs/sister_uriah_quartz.yaml
@@ -505,9 +505,9 @@ npc:
   - title: Fighter Abilities
   - abilities:
     - title: Fighting Style
-    - content:
+    - content: Protection - When a creature you can see attacks a target other than you that is within 5 feet of you, you can use your reaction to impose disadvantage on the attack roll. You must be wielding a shield.
     - title: Second Wind
-    - content: Bonus Action to regain 1d10 + 
+    - content: Bonus Action to regain 1d10 + 10
     - title: Action Surge
     - content: Once every short/long rest can take an extra action
     - title: Extra Attack
@@ -521,8 +521,40 @@ npc:
     - title: Rune Carver
     - content: You can use magic runes to enhance your gear. You learn two runes of your choice, from among the runes described below, and each time you gain a level in this class, you can replace one rune you know with a
                different one from this feature. When you reach certain levels in this class, you learn additional runes, as shown in the Runes Known table.
-    - title: Runes Known
-    - content: Cloud Rune, Stone Rune, Storm Rune, Fire Rune
+    - content: Runes Known	
+    - content: Fighter Level  Number of Runes
+    - content: 3rd            2
+    - content: 7th            3
+    - content: 10th           4
+    - content: 15th           5
+    - content: Whenever you finish a long rest, you can touch a number of objects equal to the number of runes you know, and you inscribe a different rune onto each of the objects. To be eligible, an object must be a 
+               weapon, a suit of armor, a shield, a piece of jewelry, or something else you can wear or hold in a hand. Your rune remains on an object until you finish a long rest, and an object can bear only one of your 
+               runes at a time.
+               The following runes are available to you when you learn a rune. If a rune has a level requirement, you must be at least that level in this class to learn the rune. If a rune requires a saving throw, your 
+    - content: Rune Magic save DC equals 8 + your proficiency bonus + your Constitution modifier.
+    - content: Cloud Rune - This rune emulates the deceptive magic used by some cloud giants. While wearing or carrying an object inscribed with this rune, you have advantage on Dexterity (Sleight of Hand) checks and 
+                            Charisma (Deception) checks. In addition, when you or a creature you can see within 30 feet of you is hit by an attack roll, you can use your reaction to invoke the rune and choose a different 
+                            creature within 30 feet of you, other than the attacker. The chosen creature becomes the target of the attack, using the same roll. This magic can transfer the attack's effects regardless of the
+                            attack's range. Once you invoke this rune, you can't do so again until you finish a short or long rest.
+    - content: Fire Rune - This rune's magic channels the masterful craftsmanship of great smiths. While wearing or carrying an object inscribed with this rune, your proficiency bonus is doubled for any ability check you 
+                           make that uses your proficiency with a tool. In addition, when you hit a creature with an attack using a weapon, you can invoke the rune to summon fiery shackles; the target takes an extra 2d6 
+                           fire damage, and it must succeed on a Strength saving throw or be restrained for 1 minute. While restrained by the shackles, the target takes 2d6 fire damage at the start of each of its turns. \
+                           The target can repeat the saving throw at the end of each of its turns, banishing the shackles on a success. Once you invoke this rune, you can't do so again until you finish a short or long rest.
+    - content: Frost Rune - This rune's magic evokes the might of those who survive in the wintry wilderness, such as frost giants. While wearing or carrying an object inscribed with this rune, you have advantage on Wisdom
+                            (Animal Handling) checks and Charisma (Intimidation) checks. In addition, you can invoke the rune as a bonus action to increase your sturdiness. For 10 minutes, you gain a +2 bonus to all ability
+                            checks and saving throws that use Strength or Constitution. Once you invoke this rune, you can't do so again until you finish a short or long rest.
+    - content: Stone Rune - This rune's magic channels the judiciousness associated with stone giants. While wearing or carrying an object inscribed with this rune, you have advantage on Wisdom (Insight) checks, and you 
+                            have darkvision out to a range of 120 feet. In addition, when a creature you can see ends its turn within 30 feet of you, you can use your reaction to invoke the rune and force the creature to 
+                            make a Wisdom saving throw. Unless the save succeeds, the creature is charmed by you for 1 minute. While charmed in this way, the creature has a speed of 0 and is incapacitated, descending into
+                            a dreamy stupor. The creature repeats the saving throw at the end of each of its turns, ending the effect on a success. Once you invoke this rune, you can't do so again until you finish a short 
+                            or long rest.
+    - content: Hill Rune - (7th Level or Higher). This rune's magic bestows a resilience reminiscent of a hill giant. While wearing or carrying an object that bears this rune, you have advantage on saving throws against 
+                           being poisoned, and you have resistance against poison damage. In addition, you can invoke the rune as a bonus action, gaining resistance to bludgeoning, piercing, and slashing damage for 1 
+                           minute. Once you invoke this rune, you can't do so again until you finish a short or long rest.
+    - content: Storm Rune - (7th Level or Higher). Using this rune, you can glimpse the future like a storm giant seer. While wearing or carrying an object inscribed with this rune, you have advantage on Intelligence 
+                            (Arcana) checks, and you can't be surprised as long as you aren't incapacitated. In addition, you can invoke the rune as a bonus action to enter a prophetic state for 1 minute or until you're 
+                            incapacitated. Until the state ends, when you or another creature you can see within 60 feet of you makes an attack roll, a saving throw, or an ability check, you can use your reaction to cause 
+                            the roll to have advantage or disadvantage. Once you invoke this rune, you can't do so again until you finish a short or long rest.
     - title: Giant Might
     - content: You have learned how to imbue yourself with the might of giants. As a bonus action, you magically gain the following benefits, which last for 1 minute;
                If you are smaller than Large, you become Large, along with anything you are wearing. If you lack the room to become Large, your size doesn't change.
