--- a/npcs/sorsha_silvanya.yaml
+++ b/npcs/sorsha_silvanya.yaml
@@ -552,12 +552,12 @@ npc:
                choice.
     - title: Arcane Armor
     - contnet: Your metallurgical pursuits have led to you making armor a conduit for your magic. As an action, you can turn a suit of armor you are wearing into Arcane Armor, provided you have smith's tools in hand. 
-               You gain the following benefits while wearing this armor;
-               If the armor normally has a Strength requirement, the arcane armor lacks this requirement for you.
-               You can use the arcane armor as a spellcasting focus for your artificer spells.
-               The armor attaches to you and can’t be removed against your will. It also expands to cover your entire body, although you can retract or deploy the helmet as a bonus action. The armor replaces any 
+    - content: You gain the following benefits while wearing this armor;
+    - content: If the armor normally has a Strength requirement, the arcane armor lacks this requirement for you.
+    - content: You can use the arcane armor as a spellcasting focus for your artificer spells.
+    - content: The armor attaches to you and can’t be removed against your will. It also expands to cover your entire body, although you can retract or deploy the helmet as a bonus action. The armor replaces any 
                missing limbs, functioning identically to a body part it is replacing.
-               The armor continues to be Arcane Armor until you don another suit of armor or you die.
+    - content: The armor continues to be Arcane Armor until you don another suit of armor or you die.
     - title: Armor Model
     - content: You can customize your Arcane Armor. When you do so, choose one of the following armor models; Guardian or Infiltrator. The model you choose gives you special benefits while you wear it. Each model includes
                a special weapon. When you attack with that weapon, you can add your Intelligence modifier, instead of Strength or Dexterity, to the attack and damage rolls. You can change the armor's model whenever you 
@@ -572,10 +572,10 @@ npc:
                doff the armor. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
     - title: Infiltrator
     - content: You customize your armor for subtle undertakings. It has the following features;
-               Lightning Launcher - A gemlike node appears on one of your armored fists or on the chest (your choice). It counts as a simple ranged weapon, with a normal range of 90 feet and a long range of 300 feet, 
+    - content: Lightning Launcher - A gemlike node appears on one of your armored fists or on the chest (your choice). It counts as a simple ranged weapon, with a normal range of 90 feet and a long range of 300 feet, 
                                     and it deals 1d6 lightning damage on a hit. Once on each of your turns when you hit a creature with it, you can deal an extra 1d6 lightning damage to that target.
-               Powered Steps - Your walking speed increases by 5 feet.
-               Dampening Field - You have advantage on Dexterity (Stealth) checks. If the armor normally imposes disadvantage on such checks, the advantage and disadvantage cancel each other, as normal.  
+    - content: Powered Steps - Your walking speed increases by 5 feet.
+    - content: Dampening Field - You have advantage on Dexterity (Stealth) checks. If the armor normally imposes disadvantage on such checks, the advantage and disadvantage cancel each other, as normal.  
     - title: Extra Attack
     - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
     - title: Armor Modifications
@@ -604,11 +604,11 @@ npc:
     - title: Gadget Box
     - content: Allows you to use specific spells of your choosing and can be used identically to Thieve's Tools or Tinker's Tools, Spellcasting is not intrinisc to the spy and that without the Gadget Box, the Spy may not 
                use Gadget Box spellcasting.
-               Gadget Box Spellcasting
-               Cantrip - Prestidigitation, Produce Flame
-               1st Level - Knock, Warding Bond
-               2nd Level - Locate, Sending, Scrying
-               Gadget Box Self Destruct Mode - You can set a delay between 1 second and 24hrs. During that time the gadget box cannot be open by any means and cannot be used. At the end of that duration all creatures within
+    - content: Gadget Box Spellcasting
+    - content: Cantrip 
+    - content: 1st Level 
+    - content: 2nd Level 
+    - content: Gadget Box Self Destruct Mode - You can set a delay between 1 second and 24hrs. During that time the gadget box cannot be open by any means and cannot be used. At the end of that duration all creatures within
                                                60ft must make a Constitution saving throw or take Xd6 force damage and be knocked prone, where X is your Rogue Level. Taking half damage on a successful save. It takes 1 weeks 
                                                using tinker's tools to build a new box
     
