--- a/npcs/thaerus_lonithar.yaml
+++ b/npcs/thaerus_lonithar.yaml
@@ -535,19 +535,19 @@ npc:
   - abilities: 
     - title: Path of the Kensei
     - content: Your special martial arts training leads you to master the use of certain weapons. This path also includes instruction in the deft strokes of calligraphy or painting. You gain the following benefits;
-               Kensei Weapons - Choose two types of weapons to be your kensei weapons; one melee weapon and one ranged weapon. Each of these weapons can be any simple or martial weapon that lacks the heavy and 
+    - content: Kensei Weapons - Choose two types of weapons to be your kensei weapons; one melee weapon and one ranged weapon. Each of these weapons can be any simple or martial weapon that lacks the heavy and 
                                 special properties. The longbow is also a valid choice. You gain proficiency with these weapons if you don't already have it. Weapons of the chosen types are monk weapons for you. 
                                 Many of this tradition's features work only with your kensei weapons. When you reach 6th, 11th, and 17th level in this class, you can choose another type of weapon – either melee or
                                 ranged – to be a kensei weapon for you, following the criteria above. - Longbow, Spear and Javelin
-               Agile Parry - If you make an unarmed strike as part of the Attack action on your turn and are holding a kensei weapon, you can use it to defend yourself if it is a melee weapon. You gain a +2 bonus
+    - content: Agile Parry - If you make an unarmed strike as part of the Attack action on your turn and are holding a kensei weapon, you can use it to defend yourself if it is a melee weapon. You gain a +2 bonus
                              to AC until the start of your next turn, while the weapon is in your hand and you aren’t incapacitated.
-               Kenseis Shot - You can use a bonus action on your turn to make your ranged attacks with a kensei weapon more deadly. When you do so, any target you hit with a ranged attack using a kensei weapon
+    - content: Kenseis Shot - You can use a bonus action on your turn to make your ranged attacks with a kensei weapon more deadly. When you do so, any target you hit with a ranged attack using a kensei weapon
                               takes an extra 1d4 damage of the weapon’s type. You retain this benefit until the end of the current turn.
-               Way of the Brush - You gain proficiency with your choice of calligrapher's supplies or painter's supplies.
+    - content: Way of the Brush - You gain proficiency with your choice of calligrapher's supplies or painter's supplies.
     - title: One with the Blade
     - content: You extend your ki into your kensei weapons, granting you the following benefits
-               Magic Kensei Weapons - Your attacks with your kensei weapons count as magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage.
-               Deft Strike - When you hit a target with a kensei weapon, you can spend 1 ki point to cause the weapon to deal extra damage to the target equal to your Martial Arts die. You can use this feature 
+    - content: Magic Kensei Weapons - Your attacks with your kensei weapons count as magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage.
+    - content: Deft Strike - When you hit a target with a kensei weapon, you can spend 1 ki point to cause the weapon to deal extra damage to the target equal to your Martial Arts die. You can use this feature 
                              only once on each of your turns.
 
   - title: Feats
