--- a/npcs/the_drunken_coward.yaml
+++ b/npcs/the_drunken_coward.yaml
@@ -526,8 +526,8 @@ npc:
                until the end of the current turn.
     - title: Tipsy Sway
     - content: You can move in sudden, swaying ways. You gain the following benefits.
-               Leap to Your Feet - When you're prone, you can stand up by spending 5 feet of movement, rather than half your speed.
-               Redirect Attack - When a creature misses you with a melee attack roll, you can spend 1 ki point as a reaction to cause that attack to hit one creature of your choice, other than the attacker, that you can
+    - content: Leap to Your Feet - When you're prone, you can stand up by spending 5 feet of movement, rather than half your speed.
+    - content: Redirect Attack - When a creature misses you with a melee attack roll, you can spend 1 ki point as a reaction to cause that attack to hit one creature of your choice, other than the attacker, that you can
                                  see within 5 feet of you.
 
   - title: Attacks
