--- a/npcs/the_monster.yaml
+++ b/npcs/the_monster.yaml
@@ -506,9 +506,9 @@ npc:
     - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray 
     - title: Deathless Nature 
     - content: Advantage on saving throws against disease and being poisoned and resistance to poison damage
-               Advantage on Death saving throws     
-               Doesn't need to eat, drink or breathe
-               Doesn't need to sleep and uneffected by sleep magic. Long rest only takes 4 hours as long as inactive. Retains consciousness during long rest
+    - content: Advantage on Death saving throws     
+    - content: Doesn't need to eat, drink or breathe
+    - content: Doesn't need to sleep and uneffected by sleep magic. Long rest only takes 4 hours as long as inactive. Retains consciousness during long rest
     - title: Knowledge from a Past Life
     - content: When making a an ability check that uses a skill, roll a d6 and add it to the check roll. Can use this a number of times equal to proficiency bonus each long rest
   - title: Artificer Abilities
@@ -570,13 +570,13 @@ npc:
                Creating an experimental elixir requires you to have alchemist supplies on your person, and any elixir you create with this feature lasts until it is drunk or until the end of your next long rest. 
                When you reach certain levels in this class, you can make more elixirs at the end of a long rest; two at 6th level and three at 15th level. Roll for each elixir's effect separately. Each elixir 
                requires its own flask.
-               d6     Effect
-                1     Healing - The drinker regains a number of hit points equal to 2d4 + your Intelligence Modifier
-                2     Swiftness - The drinker's walking speed increases by 10 feet for 1 hour.
-                3     Resilience - The drinker gains a +1 bonus to AC for 10 minutes.
-                4     Boldness - The drinker can roll a d4 and add the number rolled to every attack roll and saving throw they make for the next minute.
-                5     Flight - The drinker gains a flying speed of 10 feet for 10 minutes.
-                6     Transformation - The drinker's body is transformed as if by the Alter Self spell. The drinker determines the transformation caused by the spell, the effects of which last for 10 minutes.
+    - content: d6     Effect
+    - content:  1     Healing - The drinker regains a number of hit points equal to 2d4 + your Intelligence Modifier
+    - content:  2     Swiftness - The drinker's walking speed increases by 10 feet for 1 hour.
+    - content:  3     Resilience - The drinker gains a +1 bonus to AC for 10 minutes.
+    - content:  4     Boldness - The drinker can roll a d4 and add the number rolled to every attack roll and saving throw they make for the next minute.
+    - content:  5     Flight - The drinker gains a flying speed of 10 feet for 10 minutes.
+    - content:  6     Transformation - The drinker's body is transformed as if by the Alter Self spell. The drinker determines the transformation caused by the spell, the effects of which last for 10 minutes.
     - title: Alchemical Savant
     - content: You've developed masterful command of magical chemicals, enhancing the healing and damage you create through them. Whenever you cast a spell using your alchemist's supplies as the spellcasting focus, 
                you gain a bonus to one roll of the spell. That roll must restore hit points or be a damage roll that deals acid, fire, necrotic, or poison damage, and the bonus equals your Intelligence modifier 
