--- a/npcs/ulther_hapwath.yaml
+++ b/npcs/ulther_hapwath.yaml
@@ -547,11 +547,11 @@ npc:
     - title: Transmuters Stone
     - content: You can spend 8 hours creating a transmuter's stone that stores transmutation magic. You can benefit from the stone yourself or give it to another creature. A creature gains a benefit of your choice 
                as long as the stone is in the creature's possession. When you create the stone, choose the benefit from the following options;
-               Darkvision out to a range of 60 feet
-               An increase to speed of 10 feet while the creature is unencumbered
-               Proficiency in Constitution saving throws
-               Resistance to acid, cold, fire, lightning, or thunder damage (your choice whenever you choose this benefit)
-               Each time you cast a transmutation spell of 1st level or higher, you can change the effect of your stone if the stone is on your person. If you create a new transmuter's stone, the previous one ceases
+    - content: Darkvision out to a range of 60 feet
+    - content: An increase to speed of 10 feet while the creature is unencumbered
+    - content: Proficiency in Constitution saving throws
+    - content: Resistance to acid, cold, fire, lightning, or thunder damage (your choice whenever you choose this benefit)
+    - content: Each time you cast a transmutation spell of 1st level or higher, you can change the effect of your stone if the stone is on your person. If you create a new transmuter's stone, the previous one ceases
                to function.
     - title: Shapechanger
     - content: You add the Polymorph spell to your spellbook, if it is not there already. You can cast Polymorph without expending a spell slot. When you do so, you can target only yourself and transform into a beast 
@@ -559,11 +559,11 @@ npc:
     - title: Master Transmuter
     - content: You can use your action to consume the reserve of transmutation magic stored within your transmuter's stone in a single burst. When you do so, choose one of the following effects. Your transmuter's 
                stone is destroyed and can't be remade until you finish a long rest.
-               Major Transformation - You can transmute one nonmagical object – no larger than a 5-foot cube – into another nonmagical object of similar size and mass and of equal or lesser value. You must spend 
+    - content: Major Transformation - You can transmute one nonmagical object – no larger than a 5-foot cube – into another nonmagical object of similar size and mass and of equal or lesser value. You must spend 
                                       10 minutes handling the object to transform it.
-               Panacea - You remove all curses, diseases, and poisons affecting a creature that you touch with the transmuter's stone. The creature also regains all its hit points.
-               Restore Life - You cast the Raise Dead spell on a creature you touch with the transmuter's stone, without expending a spell slot or needing to have the spell in your spellbook.
-               Restore Youth - You touch the transmuter's stone to a willing creature, and that creature's apparent age is reduced by 3d10 years, to a minimum of 13 years. This effect doesn't extend the creature's lifespan.      
+    - content: Panacea - You remove all curses, diseases, and poisons affecting a creature that you touch with the transmuter's stone. The creature also regains all its hit points.
+    - content: Restore Life - You cast the Raise Dead spell on a creature you touch with the transmuter's stone, without expending a spell slot or needing to have the spell in your spellbook.
+    - content: Restore Youth - You touch the transmuter's stone to a willing creature, and that creature's apparent age is reduced by 3d10 years, to a minimum of 13 years. This effect doesn't extend the creature's lifespan.      
     
   - title: Feats
   - content: Keen Mind, War Caster, Observant, Grappler, Spell Sniper 
