--- a/npcs/yeet_cargohlik.yaml
+++ b/npcs/yeet_cargohlik.yaml
@@ -516,10 +516,10 @@ npc:
     - content: Charm Person, Disguise Self, Feather Fall
     - title: Mage Hand Legerdemain
     - content: When you cast Mage Hand, you can make the spectral hand invisible, and you can perform the following additional tasks with it;
-               You can stow one object the hand is holding in a container worn or carried by another creature.
-               You can retrieve an object in a container worn or carried by another creature.
-               You can use thieves' tools to pick locks and disarm traps at range.
-               You can perform one of these tasks without being noticed by a creature if you succeed on a Dexterity (Sleight of Hand) check contested by the creature's Wisdom (Perception) check. In addition, you
+    - content: You can stow one object the hand is holding in a container worn or carried by another creature.
+    - content: You can retrieve an object in a container worn or carried by another creature.
+    - content: You can use thieves' tools to pick locks and disarm traps at range.
+    - content: You can perform one of these tasks without being noticed by a creature if you succeed on a Dexterity (Sleight of Hand) check contested by the creature's Wisdom (Perception) check. In addition, you
                can use the bonus action granted by your Cunning Action to control the hand.            
        
   - title: Attacks
@@ -534,9 +534,9 @@ npc:
     - title: Boots of the Mistwalker
     - content: These grey leather boots can enhance the Misty Step spell. The boots have three charges that can be used when the wearer uses Misty Step (via spell, item, or innate ability). If the wearer is not 
                attuned, they can only spend a single charge at a time. Using the 2 or 3 charge abilities requires the wearer to be attuned - 
-               1 charge - Double the range (from 30 feet to 60 feet) or May teleport to a point within range even if you cannot see it, by specifying a distance and direction. (If you end up within an object you are shunted to the nearest open space, taking 
-               2 charges - May cast Misty Step by expending 2 hit dice (and taking that much damage) instead of using a spell slot. This option will allow you to use Misty Step even if you cannot normally cast the spell.
-               3 charges - May bring a living creature of your size or smaller with you when you teleport. They appear in an unoccupied space within 5 feet you.
+    - content: 1 charge - Double the range (from 30 feet to 60 feet) or May teleport to a point within range even if you cannot see it, by specifying a distance and direction. (If you end up within an object you are shunted to the nearest open space, taking 
+    - content: 2 charges - May cast Misty Step by expending 2 hit dice (and taking that much damage) instead of using a spell slot. This option will allow you to use Misty Step even if you cannot normally cast the spell.
+    - content: 3 charges - May bring a living creature of your size or smaller with you when you teleport. They appear in an unoccupied space within 5 feet you.
                            The boots regain all charges at dawn. 
     - title: Cloak of Displacement
     - content: While you wear this cloak, it projects an illusion that makes you appear to be standing in a place near your actual location, causing any creature to have disadvantage on attack rolls against you. If
